--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   liquibase:
+    enabled: true
     change-log: classpath:/db/changelog/db.changelog-master.yaml
+    contexts: dev
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/observation
