--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,240 +1,13 @@
 databaseChangeLog:
-  - logicalFilePath: db/changelog/db.changelog-master.yaml
-  - changeSet:
-      id: 1
-      author: Hramogin_Andrej
-      changes:
-#        - createTable:
-#            tableName: user
-#            columns:
-#              - column:
-#                  name: id
-#                  type: INT
-#                  autoIncrement: true
-#                  constraints:
-#                    primaryKey: true
-#                    nullable: false
-#              - column:
-#                  name: type
-#                  type: varchar
-#
-#        - createTable:
-#            tableName: species
-#            columns:
-#              - column:
-#                  name: id
-#                  type: INT
-#                  autoIncrement: true
-#                  constraints:
-#                    primaryKey: true
-#                    nullable: false
-#              - column:
-#                  name: species_name
-#                  type: varchar
-#
-#        - createTable:
-#            tableName: place
-#            columns:
-#              - column:
-#                  name: id
-#                  type: INT
-#                  autoIncrement: true
-#                  constraints:
-#                    primaryKey: true
-#                    nullable: false
-#              - column:
-#                  name: place_name
-#                  type: varchar
-
-        - createTable:
-            tableName: biotope
-            columns:
-              - column:
-                  name: id
-                  type: INT
-                  autoIncrement: true
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: type
-                  type: varchar
-
-
-        - createTable:
-            tableName: location
-            columns:
-              - column:
-                  name: id
-                  type: INT
-                  autoIncrement: true
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: type
-                  type: varchar
-
-        - createTable:
-            tableName: nest_type
-            remarks: тип гнезда (чаша, шар, закрытое)
-            columns:
-              - column:
-                  name: id
-                  type: INT
-                  autoIncrement: true
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: type
-                  type: varchar
-        - insert:
-            tableName: nest_type
-            columns:
-              - column:
-                  name: id
-                  value: 1
-              - column:
-                  name: type
-                  value: cap
-        - insert:
-            tableName: nest_type
-            columns:
-              - column:
-                  name: id
-                  value: 2
-              - column:
-                  name: type
-                  value: spherical
-        - insert:
-            tableName: nest_type
-            columns:
-              - column:
-                  name: id
-                  value: 3
-              - column:
-                  name: type
-                  value: closed
-
-        - createTable:
-            tableName: nest_dimension
-            columns:
-              - column:
-                  name: id
-                  type: INT
-                  autoIncrement: true
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-
-        - createTable:
-            tableName: nest
-            columns:
-              - column:
-                  name: id
-                  type: INT
-                  autoIncrement: true
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: eggs_quantity
-                  type: INT
-#              - column:
-#                  name: chicks_quantity
-#                  type: INT
-#              - column:
-#                  name: description
-#                  type: varchar
-#              - column:
-#                  name: biotope_id
-#                  type: INT
-#                  constraints:
-#                    foreignKeyName: biotope_id
-#                    references: biotope(id)
-#              - column:
-#                  name: location_id
-#                  type: INT
-#                  constraints:
-#                    foreignKeyName: location_id
-#                    references: location(id)
-#              - column:
-#                  name: nest_type_id
-#                  type: INT
-#                  constraints:
-#                    foreignKeyName: nest_type_id
-#                    references: nest_type(id)
-#              - column:
-#                  name: nest_dimension_id
-#                  type: INT
-#                  constraints:
-#                    foreignKeyName: nest_dimension_id
-#                    references: nest_dimension(id)
-#              - column:
-#                  name: created_at
-#                  type: TIMESTAMP
-#              - column:
-#                  name: modified_at
-#                  type: TIMESTAMP
-
-        - createTable:
-            tableName: observation
-            remarks: основная таблица для наблюдений
-            columns:
-              - column:
-                  name: id
-                  type: INT
-                  autoIncrement: true
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: date
-                  type: DATE
-                  constraints:
-                    nullable: false
-              - column:
-                  name: quantity
-                  type: INT
-                  constraints:
-                    nullable: false
-              - column:
-                  name: description
-                  type: varchar
-              - column:
-                  name: nest_id
-                  type: INT
-                  constraints:
-                    foreignKeyName: nest_id
-                    references: nest(id)
-              - column:
-                  name: species_id
-                  type: INT
-#                  constraints:
-#                    foreignKeyName: species_id
-#                    references: species(id)
-              - column:
-                  name: user_id
-                  type: INT
-#                  constraints:
-#                    foreignKeyName: user_id
-#                    references: user(id)
-              - column:
-                  name: place_id
-                  type: INT
-#                  constraints:
-#                    foreignKeyName: place_id
-#                    references: place(id)
-              - column:
-                  name: created_at
-                  type: timestamp without time zone
-                  defaultValue: now()
-                  constraints:
-                      nullable: false
-              - column:
-                  name: modified_at
-                  type: timestamp without time zone
-                  defaultValue: now()
-                  constraints:
-                    nullable: false
+  - include:
+      file: db/changelog/changeset/create-other-tables.yaml
+  - include:
+      file: db/changelog/changeset/create-table-nest.yaml
+  - include:
+      file: db/changelog/changeset/create-table-observation.yaml
+  - include:
+      file: db/changelog/changeset/add-data-nest_type.yaml
+  - include:
+      file: db/changelog/changeset/add-data-biotope.yaml
+  - include:
+      file: db/changelog/changeset/add-data-location.yaml
