--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,6 @@ spring:
     contexts: dev
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/observation
+    url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
     password: "password"
