--- a/src/main/resources/db/changelog/changeset/create-table-nest.yaml
+++ b/src/main/resources/db/changelog/changeset/create-table-nest.yaml
@@ -12,7 +12,7 @@ databaseChangeLog:
                   constraints:
                     primaryKey: true
                     nullable: false
-#                    default: uuid_generate_v1mc()
+                    default: uuid_generate_v1mc()
               - column:
                   name: eggs_quantity
                   type: INT
