--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
