--- a/src/main/resources/db/changelog/changeset/create-table-observation.yaml
+++ b/src/main/resources/db/changelog/changeset/create-table-observation.yaml
@@ -48,7 +48,7 @@ databaseChangeLog:
               #                    references: user(id)
               - column:
                   name: place_id
-                  type: INT
+                  type: UUID
                   constraints:
                     nullable: false
               #                    foreignKeyName: place_id
