--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,13 @@
             <version>8.0.1.Final</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>4.0.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
